# Investigacion2_Docker_RestAPI

./: Dockerfile  README.md  app.py  app_service.py  db.py  docker-compose.yml  pruebas.py  pyproject.toml
database/: 00-init.sql  01-stores_procedures.sql  02-status.sql  02-user.sql  04-tasks.sql
